# Zappy

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  bench.sh  fastrun.sh  launch.sh  pyrightconfig.json  test_server.sh
.github/: pull_request_template.md
ai/: CMakeLists.txt  README.md  zappy_ai_wrapper
ai/config/: config.json  queen_config.json
ai/src/: BroadcastProtocol.py  NetworkBuffer.py  ai_factory.py  ai_logger.py  argsParser.py  config.py  context.py  elevations.py  fsm.py  generate_charts.py  look_parser.py  main.py  tcpClient.py  utility_ai.py
ai/src/fsm/: README.md  controller.py
ai/src/fsm/states/: AState.py  StateNames.py  evolution.py  reproduce.py  survival.py  swarm.py
ai/src/network/: NetworkBuffer.py
ai/src/protocol/: BroadcastProtocol.py  inventory_parser.py  look_parser.py
ai/src/queen/: README.md  controller.py
ai/src/queen/states/: evolution.py  reproduce.py  survival.py  swarm.py
ai/src/states/: AStates.py  evolution.py  survival.py  swarm.py
ai/src/uai/: actions.py  calculator.py  controller.py  state.py  utilities.py
ai/src/uai/behaviors/: ABehavior.py  follow.py  gather.py  incantation.py  rally.py  reproduce.py  survival.py
ai/src/utils/: config_loader.py  exploration.py  navigation.py  stones.py
ai/tests/: cli-parser.py
docs/: Doxyfile.common  Doxyfile.gui  Doxyfile.hub  (+2 more)
gui/: CMakeLists.txt  doc.md  multi_team_test.sh  overview.md  zigzag_test_bot.sh
gui/assets/: egg.glb
gui/assets/models/: apple.glb  crystal.glb  rimuru.glb
gui/src/: WorldState.hpp  main.cpp
gui/src/audio/: AAudioManager.cpp  AAudioManager.hpp  IAudioManager.hpp  NullAudioManager.hpp  RaylibAudioManager.cpp  RaylibAudioManager.hpp
gui/src/core/: App.cpp  App.hpp  Args.cpp  Args.hpp  DrawTypes.hpp  Event.hpp  EventQueue.cpp  EventQueue.hpp  GameState.cpp  GameState.hpp  Orientation.hpp  Resources.hpp  VisualState.hpp  WorldState.hpp
gui/src/core/behaviors/: ABehavior.hpp  ADrawableBehavior.hpp  BroadcastBehavior.cpp  BroadcastBehavior.hpp  DeathBehavior.cpp  DeathBehavior.hpp  ForkBehavior.cpp  ForkBehavior.hpp  IBehavior.hpp  IncantationBehavior.cpp  IncantationBehavior.hpp  LevelUpBehavior.cpp  LevelUpBehavior.hpp  MoveBehavior.cpp  MoveBehavior.hpp  TurnBehavior.cpp  TurnBehavior.hpp
gui/src/network/: ProtocolParser.cpp  ProtocolParser.hpp  TcpSocket.cpp  TcpSocket.hpp
gui/src/renderer/: ARenderer.hpp  HeadlessRenderer.cpp  HeadlessRenderer.hpp  IRenderer.hpp  RaylibRenderer.cpp  RaylibRenderer.hpp
gui/src/renderer/raylib_helpers/: ButtonWidget.cpp  ButtonWidget.hpp  CameraController.cpp  CameraController.hpp  ColorPalette.cpp  ColorPalette.hpp  EntityRenderer.cpp  EntityRenderer.hpp  EntityTooltipWidget.cpp  EntityTooltipWidget.hpp  GridRenderer.cpp  GridRenderer.hpp  HudWidget.cpp  HudWidget.hpp  I18n.cpp  I18n.hpp  IBackground.hpp  IWidget.hpp  PlayerPanel.cpp  PlayerPanel.hpp  RenderingHelper.cpp  RenderingHelper.hpp  SelectionFinder.cpp  SelectionFinder.hpp  SpaceSkybox.cpp  SpaceSkybox.hpp  SpeedSlider.cpp  SpeedSlider.hpp  TextRenderer.cpp  TextRenderer.hpp  TileSlotMap.cpp  TileSlotMap.hpp  TooltipRenderer.cpp  TooltipRenderer.hpp  TooltipWidget.cpp  TooltipWidget.hpp  WinScreen.cpp  WinScreen.hpp
server/: CMakeLists.txt  doc.md  overview.md
server/lib/clap/: App.cpp  App.hpp  ClapExceptions.hpp  Flag.hpp  IArgument.hpp  MultiOption.hpp  Option.hpp  ParseValue.hpp  Positional.hpp  TypeNames.hpp
server/src/: main.c  main.cpp
server/src/core/: Args.cpp  Args.hpp  GameClock.cpp  GameClock.hpp  Scheduler.cpp  Scheduler.hpp  Server.cpp  Server.hpp  World.cpp  World.hpp
server/src/core/data/: Egg.hpp  Orientation.hpp  Player.hpp  Resources.hpp  Tile.hpp
server/src/game/: AiHandlers.cpp  CommandDispatcher.cpp  CommandDispatcher.hpp  GuiHandlers.cpp  GuiNotifier.cpp  GuiNotifier.hpp  HandshakeHandler.cpp  HandshakeHandler.hpp
server/src/interfaces/: INetworkObserver.hpp  IWorldObserver.hpp
server/src/logging/: CompositeSink.cpp  CompositeSink.hpp  ConsoleSink.cpp  ConsoleSink.hpp  FileSink.cpp  FileSink.hpp  ILogSink.hpp  LogObserver.cpp  LogObserver.hpp  Logger.cpp  Logger.hpp
server/src/network/: ClientManager.cpp  ClientManager.hpp  ClientType.hpp  Connection.cpp  Connection.hpp  Listener.cpp  Listener.hpp
server/src/protocol/: AiParser.cpp  AiParser.hpp  GuiParser.cpp  GuiParser.hpp  Serializer.cpp  Serializer.hpp
server/src/utils/: broadcastDirection.hpp
tests/: CMakeLists.txt  test_gamestate.cpp  test_tcpsocket.cpp
tests/ai/: __init__.py  cli-parser.py  tcp-client.py  test_behavior.py  test_broadcast_protocol.py  test_cli_parser.py  test_config_loader.py  test_context.py  test_elevations.py  test_fsm.py  test_integration.py  test_inventory_parser.py  test_look_parser.py  test_navigation.py  test_network_buffer.py  test_queen.py  test_states.py  test_stones.py  test_tcp_client.py  test_utility_ai.py
tests/e2e/: test_e2e_ai_command.cpp  test_e2e_gui.cpp  test_e2e_handshake.cpp  test_e2e_incantation.cpp  test_e2e_slot_exhaustion.cpp  test_e2e_starvation.cpp
tests/gui/: test_app.cpp  test_args.cpp  test_eventqueue.cpp  test_gamestate.cpp  test_i18n.cpp  test_main.cpp  test_protocolparser.cpp  test_tcpsocket.cpp  test_tileslotmap.cpp
tests/server/: test_ai_handlers.cpp  test_aiparser.cpp  test_args.cpp  test_client_manager.cpp  test_command_dispatcher.cpp  test_connection.cpp  test_game_clock.cpp  test_gui_handlers.cpp  test_gui_notifier.cpp  test_guiparser.cpp  test_handshake_handler.cpp  test_listener.cpp  test_resources.cpp  test_scheduler.cpp  test_serializer.cpp  test_world.cpp
tests/tui/: test_commands.py  test_launcher.py  test_manager.py  test_ports.py  test_process.py  test_profiles.py  test_signals.py  test_supervisor.py
tui/: CMakeLists.txt  zappy_tui_wrapper
tui/config/: profiles.toml
tui/src/: app.py  app.tcss  main.py
tui/src/supervisor/: commands.py  launcher.py  manager.py  ports.py  process.py  profiles.py  signals.py  supervisor.py
tui/src/widgets/: attach_screen.py  detail_panel.py  log_panel.py  process_list.py  profile_list.py  quit_screen.py
(+8 files in other folders)
